--- a/prova9.html
+++ b/prova9.html
@@ -70,7 +70,7 @@
         <div class="time-nome">Palmeiras</div>
         <div class="time-info">São Paulo</div>
         <div class="time-info">Allianz Parque</div>
-        <div class="time-info">Campeão Brasileiro 11 vezes</div>
+        <div class="time-info"> Não possui Mundial</div>
     </div>
 
     <div class="time-seçao2">
